Fix squashed +- buttons on Safari IOS

--- a/css/styles.css
+++ b/css/styles.css
@@ -403,6 +403,7 @@ hr {
 }
 
 .add_button, .delete_button {
+	display: inline-block;
 	border-radius: 100%;
 	height: 40px;
 	width: 40px;
@@ -411,14 +412,42 @@ hr {
 	font-weight: lighter;
 	margin-left: 10px;
 	color: black;
+	-webkit-touch-callout: none; /* iOS Safari */
+	-webkit-user-select: none; /* Safari */
+	-khtml-user-select: none; /* Konqueror HTML */
+	-moz-user-select: none; /* Firefox */
+	-ms-user-select: none; /* Internet Explorer/Edge */
+	user-select: none; /* Non-prefixed version, currently
+			      supported by Chrome and Opera */
 }
 
 .add_button {
 	background-color: #60aa53;
 }
 
+.add_button span {
+	display: inline-block;
+	padding-top: 2px;
+}
+
+.add_button:hover {
+	background-color: #477c3e;
+}
+
+.add_button:active {
+	background-color: #365e2e;
+}
+
 .delete_button {
 	background-color: #aa5353;
+}
+
+.delete_button:hover {
+	background-color: #6f3737;
+}
+
+.delete_button:active {
+	background-color: #482424;
 }
 
 .loading {
